--- a/frontend/src/app/shared/social-contact/social-contact.component.css
+++ b/frontend/src/app/shared/social-contact/social-contact.component.css
@@ -1,6 +1,16 @@
 .social {
-  padding: 10px 0.8em 10px 0;
   width: 50%;
+}
+
+@media (min-width: 600px) {
+  .social {
+    padding: 1em 0.8em 1em 0;
+  }
+}
+@media (max-width: 600px) {
+  .social {
+    padding-right: 0.6em;
+  }
 }
 
 .social div {
